2004-01-20  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps.1.in, doc/gramps.1: Update.
	* doc/gramps-manual/C/gramps-manual.xml: Update.
	* src/PedView.py (build_nav_menu): Ditch stock Home item.
	* src/FamilyView.py (build_ap_menu, build_nav_menu, 
	build_parents_nosel_menu, build_sp_parents_nosel_menu, 
	build_child_menu, build_spouse_menu, build_parents_menu, 
	build_sp_parents_menu): Ditch stock Home item.
	* src/EditPlace.py (display_references): Translate event names.

2004-01-19  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/FilterEditor.py: handle unicode characters
	* src/PeopleStore.py: handle corrupt iter
	* src/GenericFilter.py: handle unicode
	* src/docgen/PSDrawDoc.py: handle iso-8859-1 characters
	* src/docgen/PdfDoc.py: handle iso-8859-1 characters

2004-01-19  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/AncestorChart2.py: Add hotkeys to check button labels.
	Add scale, compress, and title options support to the book dialog.
	* src/plugins/book.glade: Reduce minimum window height to 600 pixels.
	* src/plugins/WriteCD.py (on_ok_clicked): Correct indentation.
	* src/GrampsCfg.py (loadConfig, save_data): Correctly parse gconf key.
	* src/plugins/ReadGedcom.py (parse_individual): add /Surname/ Firstname.

	* src/plugins/AncestorChart2.py: Number pages starting with 1.
	Do not allow for mutlipage when it's a book item.
	* src/po/template.po: Update translation template.

	* NEWS: Update.
	* doc/gramps-manual/C/usage.xml: Update.
	* doc/gramps-manual/C/mainwin.xml: Update.
	* doc/gramps-manual/C/filtref.xml: Update. 

2004-01-17  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/AncestorChart2.py: more multipage improvements
	* src/plugins/Makefile.am: export AncestorChart2.py

2004-01-17  Alex Roitman  <shura@alex.neuro.umn.edu>
	* NEWS: Update.
	* src/errdialogs.glade: Add check button to the missing media dialog.
	* src/QuestionDialog.py (MissingMediaDialog.__init__): Add default
	action property.