@@ -1,3 +1,11 @@
+2004-01-20  Don Allingham  <dallingham@users.sourceforge.net>
+	* src/const.py.in: handle new translation table class
+	* src/NameEdit.py.in: handle new translation table class
+	* src/EditPerson.py.in: handle new translation table class
+	* src/TransTable.py: new Translation table class
+	* src/GenericFilter.py: handle translated rule names
+	* src/plugins/FilterEditor.py: handle translated rule names
+
 2004-01-20  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* doc/gramps.1.in, doc/gramps.1: Update.
 	* doc/gramps-manual/C/gramps-manual.xml: Update.
